--- a/index.html
+++ b/index.html
@@ -125,40 +125,23 @@
                     </div>
 
                     <!-- 项目4 -->
-                    <div class="portfolio-card" onclick="window.open('./coming-soon.html')">
-                        <div class="card-image">
-                            <img src="./assets/photo/Ink/Title.png" alt="Into the Cave">
-                        </div>
-                        <div class="card-content">
-                            <h4>Cloudtopia</h4>
-                            <div class="software-icons">
-                                <div class="software-icon"><img src="./assets/photo/Icon/UELogo.png" alt="Unreal Engine 5"></div>
-                                <div class="software-icon"><img src="./assets/photo/Icon/ProcreateLogo.png" alt="Procreate"></div>
-                            </div>
-                            <div class="project-tags">
-                                <span class="project-tag">Platform</span>
-                                <span class="project-tag">2D</span>
-                                <span class="project-tag">UE5</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- 项目5 -->
                     <div class="portfolio-card" onclick="window.open('./BubonoCraft.html')">
                         <div class="card-image">
-                            <img src="./assets/photo/E_Sheep/Title.png" alt="Ratchet & Clank UI Prototype">
+                            <img src="./assets/photo/Ink/Title.png" alt="BubonoCraft">
                         </div>
                         <div class="card-content">
-                            <h4>E_Sheep</h4>
+                            <h4>BubonoSurvival
+                        
+                            </h4>
                             <div class="software-icons">
-                                <div class="software-icon"><img src="./assets/photo/Icon/UELogo.png" alt="Unreal Engine"></div>
-                                <div class="software-icon"><img src="./assets/photo/Icon/MayaLogo.png" alt="Autodesk Maya"></div>
+                                <div class="software-icon"><img src="./assets/photo/Icon/UELogo.png" alt="Unreal Engine 5"></div>
                                 <div class="software-icon"><img src="./assets/photo/Icon/BlenderLogo.png" alt="Blender"></div>
-                                <div class="software-icon"><img src="./assets/photo/Icon/PTLogo.png" alt="Substance 3D painter"></div>
                             </div>
                             <div class="project-tags">
-                                <span class="project-tag">Game development</span>
+                                <span class="project-tag">Survival</span>
+                                <span class="project-tag">3D</span>
                                 <span class="project-tag">UE5</span>
+                                <span class="project-tag">Explore</span>
                             </div>
                         </div>
                     </div>
@@ -233,7 +216,7 @@
                 </p>
                 <!-- 社交媒体按钮 -->
                 <div class="social-media">
-                    <a href="https://www.linkedin.com/in/lerically/" target="_blank" title="LinkedIn">
+                    <a href="https://www.linkedin.com/in/yangl04/" target="_blank" title="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="https://www.instagram.com/yangliu_leric/" target="_blank" title="Instagram">
