--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <!-- 项目4 -->
                     <div class="portfolio-card" onclick="window.open('./BubonoCraft.html')">
                         <div class="card-image">
-                            <img src="./assets/photo/Ink/Title.png" alt="BubonoCraft">
+                            <img src="./asset/photo/475/Banner.png" alt="BubonoCraft">
                         </div>
                         <div class="card-content">
                             <h4>BubonoSurvival
