--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <!-- 项目3 -->
                     <div class="portfolio-card" onclick="window.open('https://bubono-bumperland.github.io/')">
                         <div class="card-image">
-                            <img src="./assets/photo/475/Title.png" alt="Howl of Iron">
+                            <img src="./assets/photo/475/Title.png" alt="BubonoBumperland">
                         </div>
                         <div class="card-content">
                             <h4>Bubono-Bumperland</h4>
