--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="portfolio-header">
                     <h3 class="typewriter-title">My Project<span class="highlight-text">|</span></h3>
                     <p class="portfolio-description">Check out the games I have worked on!</p>
-                    <a href="./coming-soon.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
+                    <a href="./portfolio-category.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
                 </div>
                 
                 <div class="portfolio-items">
@@ -147,7 +147,7 @@
                     </div>
 
                     <!-- 更多项目提示 -->
-                    <div class="portfolio-card more-card" onclick="window.open('./coming-soon.html')">
+                    <div class="portfolio-card more-card" onclick="window.open('./portfolio-category.html')">
                         <div class="more-content">
                             <h4>... and more!</h4>
                         </div>
