--- a/AukOdyssey.html
+++ b/AukOdyssey.html
@@ -45,6 +45,10 @@
             <h1>Auk Odyssey</h1>
             <p>In the frozen future of 2042, a muscular penguin awakens to save the day!</p>
             <a href="#project-overview" class="learn-more-btn">Learn More</a>
+            
+        </div>
+        <div class="scroll-down" tabindex="0" role="button" aria-label="滚动到内容部分">
+            <div class="arrow"></div>
         </div>
     </section>
 
@@ -179,9 +183,8 @@
                 <div class="footer-section">
                     <h3>PORTFOLIO</h3>
                     <ul>
-                        <li><a href="./coming-soon.html">UI/UX</a></li>
-                        <li><a href="./coming-soon.html">GAME</a></li>
-                        <li><a href="./coming-soon.html">OTHER</a></li>
+                        <li><a href="./portfolio-game.html">GAME</a></li>
+                        <li><a href="./portfolio-other.html">OTHER</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
