--- a/ShanHe.html
+++ b/ShanHe.html
@@ -52,6 +52,9 @@
             <p>Wuxia Style Third-Person RPG</p>
             <a href="https://sites.google.com/view/itgm-405-liuyang/sprint-1" class="learn-more-btn" target="_blank">Learn More</a>
         </div>
+        <div class="scroll-down" tabindex="0" role="button" aria-label="滚动到内容部分">
+            <div class="arrow"></div>
+        </div>
     </section>
 
     <!-- Project Overview -->
@@ -425,9 +428,8 @@
                 <div class="footer-section">
                     <h3>PORTFOLIO</h3>
                     <ul>
-                        <li><a href="./coming-soon.html">UI/UX</a></li>
-                        <li><a href="./coming-soon.html">GAME</a></li>
-                        <li><a href="./coming-soon.html">OTHER</a></li>
+                        <li><a href="./portfolio-game.html">GAME</a></li>
+                        <li><a href="./portfolio-other.html">OTHER</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
