--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <!-- 首页 -->
     <div class="hero" id="home" role="banner" aria-label="banner">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WDAzghagGvY?autoplay=1&mute=1&loop=1&playlist=WDAzghagGvY&controls=0&disablekb=1&playsinline=1&rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; pointer-events: none;" poster="./assets/photo/405/ShanHe.png" aria-hidden="true"></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WDAzghagGvY?autoplay=1&mute=1&loop=1&playlist=WDAzghagGvY&controls=0&disablekb=1&playsinline=1&rel=0&showinfo=0&modestbranding=1&iv_load_policy=3&fs=0&color=white&theme=dark&origin=https://yang-studio.github.io" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; pointer-events: none; opacity: 0; transition: opacity 0.5s ease;" loading="lazy" aria-hidden="true"></iframe>
         <h1>Yang's Portfolio</h1>
         <p>Game Designer</p>
-        <div class="scroll-down" tabindex="0" role="button" aria-label="滚动到关于部分">
+        <div class="scroll-down" tabindex="0" role="button" aria-label="滚动到内容部分">
             <div class="arrow"></div>
         </div>
     </div>
@@ -52,7 +52,7 @@
                 <div class="portfolio-header">
                     <h3 class="typewriter-title">My Project<span class="highlight-text">|</span></h3>
                     <p class="portfolio-description">Check out the games I have worked on!</p>
-                    <a href="./coming-soon.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
+                    <a href="./portfolio-category.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
                 </div>
                 
                 <div class="portfolio-items">
@@ -127,7 +127,7 @@
                     <!-- 项目4 -->
                     <div class="portfolio-card" onclick="window.open('./BubonoCraft.html')">
                         <div class="card-image">
-                            <img src="./assets/photo/Ink/Title.png" alt="BubonoCraft">
+                            <img src="./assets/photo/BubonoSurvival/Banner.png" alt="BubonoCraft">
                         </div>
                         <div class="card-content">
                             <h4>BubonoSurvival
@@ -147,7 +147,7 @@
                     </div>
 
                     <!-- 更多项目提示 -->
-                    <div class="portfolio-card more-card" onclick="window.open('./coming-soon.html')">
+                    <div class="portfolio-card more-card" onclick="window.open('./portfolio-category.html')">
                         <div class="more-content">
                             <h4>... and more!</h4>
                         </div>
@@ -163,31 +163,31 @@
             <div class="skill-map">
                 <!-- 系统设计 -->
                 <div class="skill-row system-design">
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Game Mechanics</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Core Loop</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Reward Systems</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">UE Blueprint</div>
-                    <div class="skill-node" data-projects="BubonoCraft:./assets/photo/E_Sheep/Title.png">Python</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Game Mechanics</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Core Loop</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Reward Systems</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">UE Blueprint</div>
+                    <div class="skill-node" data-project="BubonoCraft" data-image="./assets/photo/E_Sheep/Title.png" data-link="./BubonoCraft.html">Python</div>
                 </div>
                 <!-- 关卡设计 -->
                 <div class="skill-row level-design">
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Spatial Rhythm</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Greyboxing</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Puzzle & Combat Integration</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">UE Blockout</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Photography</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Spatial Rhythm</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Greyboxing</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Puzzle & Combat Integration</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">UE Blockout</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Photography</div>
                 </div>
                 <!-- 环境设计 -->
                 <div class="skill-row environment-design">
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Maya Modeling</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Adobe Substance 3D Painter</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Blender</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Maya Modeling</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Adobe Substance 3D Painter</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Blender</div>
                 </div>
                 <!-- 软件 -->
                 <div class="skill-row software">
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Adobe Photoshop</div>
-                    <div class="skill-node" data-projects="BubonoCraft:./assets/photo/E_Sheep/Title.png">Figma</div>
-                    <div class="skill-node" data-projects="ShanHe:./assets/photo/405/Logo.png">Git/Perforce</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Adobe Photoshop</div>
+                    <div class="skill-node" data-project="BubonoCraft" data-image="./assets/photo/E_Sheep/Title.png" data-link="./BubonoCraft.html">Figma</div>
+                    <div class="skill-node" data-project="ShanHe" data-image="./assets/photo/405/Logo.png" data-link="./ShanHe.html">Git/Perforce</div>
                 </div>
             </div>
             <!-- 图例 -->
@@ -256,9 +256,8 @@
                 <div class="footer-section">
                     <h3>PORTFOLIO</h3>
                     <ul>
-                        <li><a href="./coming-soon.html">UI/UX</a></li>
-                        <li><a href="./coming-soon.html">GAME</a></li>
-                        <li><a href="./coming-soon.html">OTHER</a></li>
+                        <li><a href="./portfolio-game.html">GAME</a></li>
+                        <li><a href="./portfolio-other.html">OTHER</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
