--- a/portfolio-category.html
+++ b/portfolio-category.html
@@ -53,12 +53,6 @@
                     </div>
                 </a>
 
-                <!-- UI/UX设计分类 -->
-                <a href="./portfolio-ui.html" class="category-card ui-design">
-                    <div class="category-content">
-                        <h3>UI/UX</h3>
-                    </div>
-                </a>
 
                 <!-- 摄影作品分类 -->
                 <a href="./portfolio-photo.html" class="category-card photography">
@@ -95,9 +89,8 @@
                 <div class="footer-section">
                     <h3>PORTFOLIO</h3>
                     <ul>
-                        <li><a href="./portfolio-ui.html">UI/UX</a></li>
                         <li><a href="./portfolio-game.html">GAME</a></li>
-                        <li><a href="./portfolio-photo.html">OTHER</a></li>
+                        <li><a href="./portfolio-other.html">OTHER</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
